--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+.main_div{
+  width: 30%;
+  height: 400px;
+  border: 1px solid black;
+  margin-left: 40%;
+  margin-top: 5%;
+}
+.top_div{
+  display: inline-block;
+}
+.top_div>input{
+  width: 320px;
+  height: 30px;
+  margin-right: 20px;
+  background-color: darkcyan;
+  color:white;
+  font-size: larger;
+}
+.top_div>button{
+  width: 100px;
+  height: 35px;
+  font-size: larger;
+  color:white;
+  cursor: pointer;
+  background-color:darkgray;
+}
+.gro{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.item{
+  width: 200px;
+  height: 30px;
+  background-color: yellowgreen;
+  margin-top: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
